<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Responsi 1 Mobile H1D023074</string>

    <string name="club_description">
        Birmingham City Football Club is a professional football club based in Birmingham, England. Formed in 1875 as Small Heath Alliance, it was renamed Small Heath in 1888, Birmingham in 1905, and Birmingham City in 1943. The team compete in the EFL Championship, the second level of the English football league system.
    </string>

    <string name="profile_club">
        Birmingham City FC
    </string>

    <string name="club_history">Club History</string>
    <string name="head_coach">Head Coach</string>
    <string name="team_squad">Team Squad</string>

    <string name="club_history_title">Birmingham City FC\'s History</string>
    <string name="back">Back</string>
    
    <string name="club_history_paragraph1">
        Birmingham City Football Club is a professional football club based in Birmingham, England. Formed in 1875 as Small Heath Alliance, it was renamed Small Heath in 1888, Birmingham in 1905, and Birmingham City in 1943. The team compete in the EFL Championship, the second level of the English football league system.
    </string>
    
    <string name="club_history_paragraph2">
        As Small Heath, they played in the Football Alliance before becoming founder members and first champions of the Football League Second Division. The most successful period in their history was in the 1950s and early 1960s. They achieved their highest finishing position of sixth in the First Division in the 1955–56 season and reached the 1956 FA Cup final. Birmingham played in two Inter-Cities Fairs Cup finals, in 1960, as the first English club side to reach a major European final, and again the following year. They won the League Cup in 1963 and again in 2011. Birmingham have played in the top tier of English football for around half of their history: the longest period spent outside the top division, between 1986 and 2002, included two brief spells in the third tier of English football, during which time they won the Football League Trophy twice.
    </string>
    
    <string name="club_history_paragraph3">
        St Andrews, renamed St. Andrews  Knighthead Park in 2024 for sponsorship reasons, has been their home ground since 1906. They have a long-standing and fierce rivalry with Aston Villa, their nearest neighbours, with whom they play the Second City derby. The clubs nickname is Blues, after the colour of their kit, and the fans are known as Bluenoses.
    </string>
</resources>